--- a/SalesWebMvc/appsettings.json
+++ b/SalesWebMvc/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SalesWebMvcContext": "Server=(localdb)\\mssqllocaldb;Database=SalesWebMvcContext-889b4189-ac4a-4540-a919-66a3d43ccd35;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "SalesWebMvcContext": "server=localhost;userid=root;password=03102018;database=saleswebmvcappdb"
   }
 }
